{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 49,
  "lineage": "88f50ff1-f35b-f3b8-89c8-c13c26a2787b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b12d3152c0cc71",
            "arn": "arn:aws:ec2:ap-south-1:119922150233:instance/i-098da875ae34b50e9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098da875ae34b50e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-Master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03325925b178dbd82",
            "private_dns": "ip-10-0-1-98.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-13-127-205-38.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.205.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-016401e9fd12367fb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed77bcd1b0528bc2",
            "tags": {
              "Name": "task1-ec2-1"
            },
            "tags_all": {
              "Name": "task1-ec2-1",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c854509ad56ccd4a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssh-sg",
            "aws_subnet.main-subnet1",
            "aws_subnet.main-subnet2",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ec2_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b12d3152c0cc71",
            "arn": "arn:aws:ec2:ap-south-1:119922150233:instance/i-017f3123842c88d6c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017f3123842c88d6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-Master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0387f71f9fba35f57",
            "private_dns": "ip-10-0-2-187.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.187",
            "public_dns": "ec2-13-203-214-67.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.214.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9f38c46903b92e4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005707044e3098568",
            "tags": {
              "Name": "task1-ec2-2"
            },
            "tags_all": {
              "Name": "task1-ec2-2",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c854509ad56ccd4a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssh-sg",
            "aws_subnet.main-subnet1",
            "aws_subnet.main-subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119922150233:internet-gateway/igw-0d69f1820e9c42027",
            "id": "igw-0d69f1820e9c42027",
            "owner_id": "119922150233",
            "tags": {
              "Name": "TF1-igw"
            },
            "tags_all": {
              "Name": "TF1-igw",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "vpc_id": "vpc-0998cf4e2f9a1638b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:loadbalancer/app/app-lb/1005edec54459498",
            "arn_suffix": "app/app-lb/1005edec54459498",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-2035931172.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:loadbalancer/app/app-lb/1005edec54459498",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-033890335a4fb73b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005707044e3098568"
              },
              {
                "subnet_id": "subnet-0ed77bcd1b0528bc2"
              }
            ],
            "subnets": [
              "subnet-005707044e3098568",
              "subnet-0ed77bcd1b0528bc2"
            ],
            "tags": {
              "Name": "app-lb"
            },
            "tags_all": {
              "Name": "app-lb",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "vpc_id": "vpc-0998cf4e2f9a1638b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.main-subnet1",
            "aws_subnet.main-subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:listener/app/app-lb/1005edec54459498/460b9bcb3c0ba759",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:targetgroup/app-tg/144ea2e3cbd682ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:listener/app/app-lb/1005edec54459498/460b9bcb3c0ba759",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:loadbalancer/app/app-lb/1005edec54459498",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.elb_sg",
            "aws_subnet.main-subnet1",
            "aws_subnet.main-subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:targetgroup/app-tg/144ea2e3cbd682ff",
            "arn_suffix": "targetgroup/app-tg/144ea2e3cbd682ff",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:targetgroup/app-tg/144ea2e3cbd682ff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0998cf4e2f9a1638b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:targetgroup/app-tg/144ea2e3cbd682ff-20250722075748735600000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:targetgroup/app-tg/144ea2e3cbd682ff",
            "target_id": "i-098da875ae34b50e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.my_ec2",
            "aws_lb_target_group.app_tg",
            "aws_security_group.ssh-sg",
            "aws_subnet.main-subnet1",
            "aws_subnet.main-subnet2",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ec2_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:targetgroup/app-tg/144ea2e3cbd682ff-20250722075749107300000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:119922150233:targetgroup/app-tg/144ea2e3cbd682ff",
            "target_id": "i-017f3123842c88d6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.my_ec2",
            "aws_lb_target_group.app_tg",
            "aws_security_group.ssh-sg",
            "aws_subnet.main-subnet1",
            "aws_subnet.main-subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119922150233:route-table/rtb-004ebce6395128918",
            "id": "rtb-004ebce6395128918",
            "owner_id": "119922150233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d69f1820e9c42027",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF1-route-table"
            },
            "tags_all": {
              "Name": "TF1-route-table",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "timeouts": null,
            "vpc_id": "vpc-0998cf4e2f9a1638b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3cbfbab0c419d43",
            "route_table_id": "rtb-004ebce6395128918",
            "subnet_id": "subnet-0ed77bcd1b0528bc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-rt",
            "aws_subnet.main-subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d155fb8d5a61d7c9",
            "route_table_id": "rtb-004ebce6395128918",
            "subnet_id": "subnet-005707044e3098568"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-rt",
            "aws_subnet.main-subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119922150233:security-group/sg-033890335a4fb73b4",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033890335a4fb73b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-sg",
            "name_prefix": "",
            "owner_id": "119922150233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb-sg"
            },
            "tags_all": {
              "Name": "elb-sg",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "timeouts": null,
            "vpc_id": "vpc-0998cf4e2f9a1638b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119922150233:security-group/sg-0c854509ad56ccd4a",
            "description": "Allow SSH from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c854509ad56ccd4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "85.130.253.122/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TF1-ssh-sg",
            "name_prefix": "",
            "owner_id": "119922150233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF1-ssh-sg"
            },
            "tags_all": {
              "Name": "TF1-ssh-sg",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "timeouts": null,
            "vpc_id": "vpc-0998cf4e2f9a1638b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119922150233:subnet/subnet-0ed77bcd1b0528bc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed77bcd1b0528bc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "119922150233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF1-subnet1"
            },
            "tags_all": {
              "Name": "TF1-subnet1",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "vpc_id": "vpc-0998cf4e2f9a1638b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119922150233:subnet/subnet-005707044e3098568",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005707044e3098568",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "119922150233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF1-subnet2"
            },
            "tags_all": {
              "Name": "TF1-subnet2",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            },
            "vpc_id": "vpc-0998cf4e2f9a1638b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119922150233:vpc/vpc-0998cf4e2f9a1638b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088ebb2cc645d8871",
            "default_route_table_id": "rtb-004148efc745ea509",
            "default_security_group_id": "sg-03e2b4b103c037f59",
            "dhcp_options_id": "dopt-04f1502fc0404732b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0998cf4e2f9a1638b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004148efc745ea509",
            "owner_id": "119922150233",
            "tags": {
              "Name": "TF1-vpc"
            },
            "tags_all": {
              "Name": "TF1-vpc",
              "Owner": "Yadin-TF-task1",
              "expiration_date": "30-07-25"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}